# app-yt-subs

./: .gitignore  LICENSE  README.md  _push.py  index.html  install.ps1  pyproject.toml  pyrightconfig.json  tracked_files_v2.txt
.github/workflows/: release.yml
scripts/: build.py  install.ps1  install.sh  push.py  release.py
src/yt_subs/: main.py
