[project]
name = "yt-subs"
version = "0.1.0"
description = "YouTube subscription management tool"
authors = [{ name = "savvy773" }]
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.58.0",
    "typer>=0.24.1",
    "rich>=14.3.4",
    "flet-desktop>=0.84.0",
    "flet[build]>=0.84.0",
]

[project.scripts]
yt-subs = "yt_subs.main:app"

[tool.uv]
managed = true
