[project]
name = "python-workspace"
version = "1.0.0"
description = "My Python tools workspace"
authors = [{ name = "savvy773" }]
requires-python = ">=3.14"
dependencies = [
    "flet>=0.84.0",
    "playwright>=1.58.0",
    "typer>=0.24.1",
    "rich>=14.3.4",
    "flet-desktop>=0.84.0",
]

[tool.uv]
managed = true
workspace = { members = ["yt_subs", "others/*"] }
