[project]
name = "yt-subs"
version = "1.0.2"
description = "YouTube Subscriptions Manager - Safe & Automated GUI"
authors = [{ name = "savvy773" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "flet>=0.84.0",
    "flet-desktop>=0.84.0",
    "playwright>=1.58.0",
]

[project.scripts]
yt-subs = "yt_subs.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_subs"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "blake3>=1.0.8",
    "typer>=0.24.1",
    "rich>=14.3.4",
]

